# LOLAutoRecorder

./: pyproject.toml
assets/: match_data.json  thumbnail.html
video_maker/: main.py
video_maker/entities/: match_data.py
video_maker/usecases/: add_ending_screen_on_youtube.py  add_subtitles_on_youtube.py  create_thumbnail.py  record_video.py  scrap_lol_data.py  upload_youtube.py
